Bug 119209 - [CMIS] Windows share has inappropriate server URL suggestion
Summary: [CMIS] Windows share has inappropriate server URL suggestion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: CMIS
  Show dependency treegraph
 
Reported: 2018-08-10 21:10 UTC by Olivier Hallot
Modified: 2018-10-28 02:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2018-08-10 21:10:23 UTC
The CMIS (remote server) dialog has https://www.googleapis.com/drive/v2 as suggestion for a Windows share server.

The URL above is actually not the best Windows share to suggest, if even it is. A more generic URL such as https://myserver.com can fit as good example.

Step to reproduce
1) Open remote server dialog
2) Choose Windows share

expected results: A generic URL in the Server field
Actual result: "https://www.googleapis.com/drive/v2"
Comment 1 Buovjaga 2018-09-03 18:24:15 UTC
From the start center I did
1. Remote files
2. Add service
3. Type: Windows share

Host file read
http://<host:port>/alfresco/cmisatom

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: 1c59d021b3dd27c8c0255312bd0d53ad25965bab
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on September 1st 2018

Same on Windows.
Comment 2 Mike Kaganski 2018-09-11 16:31:29 UTC
More specifically, the host box holds the suggestion left from last-active entry (even if the dialog itself hides the box for this server type).

NEW.
Comment 3 Xisco Faulí 2018-09-14 10:35:02 UTC
(In reply to Buovjaga from comment #1)
> Host file read
> http://<host:port>/alfresco/cmisatom

Same here:

Version: 6.2.0.0.alpha0+
Build ID: 4e5f89d2d3511b6421b388ecaba2f61ada14d084
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

Anyway, I guess we should change this https://opengrok.libreoffice.org/xref/core/officecfg/registry/data/org/openoffice/Office/Common.xcu#444
Comment 4 Xisco Faulí 2018-09-18 21:58:01 UTC
Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.15; Render: default;
Comment 5 Xisco Faulí 2018-09-18 22:12:51 UTC
So as Mike said in comment 2 this is a UI problem, my comment 3 is incorrect
Comment 6 Xisco Faulí 2018-09-18 23:01:03 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/60732/
Comment 7 Commit Notification 2018-10-28 00:11:19 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=871089ecca78d818dee5c588f1a9a5e975816f7c

tdf#119209: Windows share has inappropriate server suggestion

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.