tdf#119209: Windows share has inappropriate server suggestion

Follow the same logic as HostDetailsContainer

Change-Id: I3de8b2fc07b9caef6b4d20ab89242137d738c522